--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "gulp-minify-css": "^1.2.4",
     "gulp-rename": "^1.2.2",
     "gulp-tinypng": "^1.0.2",
-    "gulp-uglify": "^1.5.3"
+    "gulp-uglify": "^1.5.3",
+    "jshint": "^2.9.1"
   },
   "devDependencies": {},
   "scripts": {
